<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Techahashi</string>

    <string name="tutorial_text">TECHAHASHI\n\nEach paragraph\nis a slide\n\nThis is a slide\n.\nwith a blank line\n\nTap on the preview\nto start the presentation\n\nSwipe left or right on the preview\nto go to another slide\n\nYou may also pick\na color scheme in the menu\n\nDone!\n\nUML\n\nYou can also add UML!\n\nEnable PlantUML in the menu\n\n@startuml\nBob->Alice : hello\n@enduml\n\n@startuml nw 50%\nclass Foo\n.\nclass Bar\n@enduml\n.\n#Hello\n.\n@startuml se 50%\nclass Baz\n@enduml\n\nCheck out the PlantUML docs in the menu\n\nMathJax\n\nUse @startmath and @endmath\n\n@startmath\nf(x) = ax^2 + bx +c\n@endmath\n\nThe layout options apply as well!\n\n@startmath se 75%\nf(x) = ax^2+bx+c=0\n@endmath\n\nWant to create more presentations?\n\First change the text of this presentation\n\nThen swipe right on the editor to\ncreate a new presentation\n\nSwipe left to go back\nAll data is auto-saved :)\n\nYou can do more stuff\n\nSuch as setting templates\n\nJust check out the menu\n\nEach presentation has its own settings\n\nDon\'t forget to export\nto PDF and share</string>

    <string name="pdf_file_name_template" translatable="false">Techahashi-%1s.pdf</string>
    <string name="failed_export_pdf">Failed to export to PDF</string>

    <string name="dlg_style_picker_title">Pick a style</string>
    <string name="btn_ok">OK</string>

    <string name="om_insert_image">Insert image</string>
    <string name="om_style">Style</string>
    <string name="om_export_pdf">Export to PDF</string>
    <string name="om_config_plantuml">Configure PlantUML</string>

    <string name="pm_warning">Note: a PlantUML server is used to create the diagram. The textual data is sent via internet to the configured URL. For confidential information, use a trusted URL with HTTPS.</string>
    <string name="pm_enable">Enable PlantUML</string>
    <string name="pm_plantuml_endpoint">PlantUML Endpoint URL</string>

    <string name="pm_plantuml_template_before">The configured text below is inserted at the beginning of every UML diagram.</string>
    <string name="pm_plantuml_template_after">The configured text below is inserted at the end of every UML diagram.</string>

    <string name="om_plantuml_docs">PlantUML docs</string>
    <string name="om_template">Template</string>

    <string name="template_before">The configured text below is inserted at the beginning of every slide.</string>
    <string name="template_after">The configured text below is inserted at the end of every slide.</string>

    <string name="select_resolution">Select Resolution</string>
    <string name="om_remove">Remove Presentation</string>
    <string name="are_you_sure">Are you sure?</string>

    <string name="notifications_exporting_pdf_progress">Exporting… (may take time).</string>
    <string name="notifications_exporting_pdf_complete">Export completed. Tap to open PDF.</string>
</resources>
